# SimpleFuzzer

./: CMakeLists.txt  README.md
include/: argument_handler.h  generators.h  utils.h  words.h
src/: argument_handler.c  generators.c  simple_fuzzer.c  utils.c
